--- a/test.html
+++ b/test.html
@@ -130,6 +130,18 @@
 			var out2 = "";
 			var j = "";
 
+			function startListening(){
+			  setInterval( function(){
+			    Puck.eval("BTN.read()",function(x) {
+			      console.log(x);
+			      if( x ) {
+				// Scrivi quello che vuoi fare quando premete il pulsante
+				startPause()
+			      }
+			    });
+			  },500);
+		      	}
+			
 			function startPause()
 			{
 				if(flag == false)
