--- a/test.html
+++ b/test.html
@@ -330,7 +330,7 @@
 			<h1 id="output2">00:00:00:0</h1>
 		</div>
 		<div>
-			<button id="startPause" onclick="startPause()">START</button>
+			<button id="startPause" onclick="startListening()">START</button>
 			<button id="reset" onclick="reset()">RESET</button>
 		</div>
 		<div>
