--- a/test.html
+++ b/test.html
@@ -136,7 +136,7 @@
 			      console.log(x);
 			      if( x ) {
 				// Scrivi quello che vuoi fare quando premete il pulsante
-				startPause()
+				startPause();
 			      }
 			    });
 			  },500);
