--- a/prova.html
+++ b/prova.html
@@ -131,15 +131,16 @@
 			var j = "";
 			
 			function startListening(){
+			  
 			  setInterval( function(){
 			    Puck.eval("BTN.read()",function(x) {
 			      console.log(x);
 			      if( x ) {
-				// Scrivi quello che vuoi fare quando premete il pulsante
+				// Scrivi quello che vuoi fare quando premi il pulsante
 				startPause();
 			      }
 			    });
-			  },200);
+			  },1000);
 		      	}
 			
 			function startPause()
