--- a/prova.html
+++ b/prova.html
@@ -140,6 +140,20 @@
 				startPause();
 			      }
 			    });
+			  },300);
+		      	}
+			
+			
+			function resetListening(){
+			  
+			  setInterval( function(){
+			    Puck.eval("BTN.read()",function(x) {
+			      console.log(x);
+			      if( x ) {
+				// Scrivi quello che vuoi fare quando premi il pulsante
+				reset();
+			      }
+			    });
 			  },1000);
 		      	}
 			
