--- a/prova.html
+++ b/prova.html
@@ -131,7 +131,6 @@
 			var j = "";
 			
 			function startListening(){
-			  
 			  setInterval( function(){
 			    Puck.eval("BTN.read()",function(x) {
 			      console.log(x);
@@ -141,11 +140,16 @@
 			      }
 			    });
 			  },300);
-			  Puck.eval("BTN.read()",function(x) {
+		      	}
+			
+			
+			function resetListening(){
+			  setInterval( function(){
+			    Puck.eval("BTN.read()",function(x) {
 			      console.log(x);
 			      if( x ) {
 				// Scrivi quello che vuoi fare quando premi il pulsante
-				reset();
+				startPause();
 			      }
 			    });
 			  },1000);
@@ -319,7 +323,7 @@
 		</div>
 		<div>
 			<button id="startPause" onclick="startListening()">START</button>
-			<button id="reset" onclick="reset()">RESET</button>
+			<button id="reset" onclick="resetListening()">RESET</button>
 		</div>
 		<div>
 			<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
