--- a/prova.html
+++ b/prova.html
@@ -149,7 +149,7 @@
 			      console.log(x);
 			      if( x ) {
 				// Scrivi quello che vuoi fare quando premi il pulsante
-				startPause();
+				reset();
 			      }
 			    });
 			  },1000);
