--- a/test.html
+++ b/test.html
@@ -331,7 +331,7 @@
 			<h1 id="output2">00:00:00:0</h1>
 		</div>
 		<div>
-			<button id="startPause" onclick="startPause">START</button>
+			<button id="startPause" onclick="startPause()">START</button>
 			<button id="reset" onclick="startListening()">RESET</button>
 		</div>
 		<div>
