--- a/prova.html
+++ b/prova.html
@@ -129,13 +129,16 @@
 			var out1 = "";
 			var out2 = "";
 			var j = "";
+			var iter = 0;
 			
 			function startListening(c){
+			  iter = c;
 			  setInterval( function(){
 			    Puck.eval("BTN.read()",function(x) {
 			      console.log(x);
 			      if( x ) {
 				// Scrivi quello che vuoi fare quando premi il pulsante
+				alert("iter);
 				startPause();
 			      }
 			    });
