--- a/prova.html
+++ b/prova.html
@@ -138,7 +138,7 @@
 			      console.log(x);
 			      if( x ) {
 				// Scrivi quello che vuoi fare quando premi il pulsante
-				alert("iter);
+				alert(iter);
 				startPause();
 			      }
 			    });
