--- a/test.html
+++ b/test.html
@@ -338,7 +338,7 @@
 		</div>
 		<div>
 			<button id="startPause" onclick="startListening()">START</button>
-			<button id="reset" onclick="startListening()">RESET</button>
+			<button id="reset" onclick="">RESET</button>
 		</div>
 		<div>
 			<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
