--- a/test.html
+++ b/test.html
@@ -137,8 +137,9 @@
 						console.log(x);
 						if(x === true) {
 							x = setTimeout(function(x){
+								console.log(x);
 								if(x === true) {
-									// Scrivi quello che vuoi fare quando premete il pulsante
+									
 									reset();
 								}
 								else
