--- a/test.html
+++ b/test.html
@@ -138,7 +138,7 @@
 						if(x === true) {
 							x = setTimeout(function(x){
 								console.log(x);
-								if(x === true) {
+								if(x === false) {
 									
 									reset();
 								}
