--- a/prova.html
+++ b/prova.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
-		<script src="https://www.puck-js.com/puck.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+		<script src="https://www.puck-js.com/puck.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-		<title>Prova</title>
+		<title>StopWatching</title>
 		<style>
 			#status
 			{
@@ -88,6 +88,7 @@
 			}
 			#adv1
 			{
+
 				color: red;
 				text-align: left;
 				font-size: 15px;
@@ -129,18 +130,28 @@
 			var out1 = "";
 			var out2 = "";
 			var j = "";
-			
-			    (function(e) {
-  			  var len = e.time-e.lastTime;
- 			    if(len>0.3)
-  			    {
-    			      reset();
- 			    }
-  			    else
- 			    {
-    			      startPause();
- 			    }
-			}, BTN, { edge:"falling", repeat:true, debounce:50});
+			var cont = 0;
+
+			function startListening(){
+				setInterval( function(){
+					Puck.eval("BTN.read()",function(x) {
+						console.log(x);
+						if(x === true) {
+							setTimeout(function(x) {
+								console.log(x);
+								if(x === true) {
+									
+									reset();
+								}
+								else
+								{
+									startPause();
+								}
+							},400);
+						}
+					});
+				},1000);	
+		      	}
 			
 			function startPause()
 			{
@@ -177,31 +188,39 @@
 				var mins1 = Math.floor(time1/10/60) % 60;
 				var secs1 = Math.floor(time1/10) % 60;
 				var tenths1 = (time1 % 10)+1;
+
 				if(hours1 < 10){hours1 = "0" + hours1;}
 				if(mins1 < 10){mins1 = "0" + mins1;}
 				if(secs1 < 10){secs1 = "0" + secs1;}
 				if(tenths1 >= 10){secs1++; tenths1=0;}
+
 				out1 = "ACTIVE FOR " + hours1 + ":" + mins1 + ":" + secs1 + ":" + tenths1;
+
 				var hours2 = Math.floor(time2/10/60/60) % 60;
 				var mins2 = Math.floor(time2/10/60) % 60;
 				var secs2 = Math.floor(time2/10) % 60;
 				var tenths2 = (time2 % 10)+1;
+
 				if(hours2 < 10){hours2 = "0" + hours2;}
 				if(mins2 < 10){mins2 = "0" + mins2;}
 				if(secs2 < 10){secs2 = "0" + secs2;}
 				if(hours2 >= 3){running2 == 0;}
 				if(tenths2 >= 10){secs2++; tenths2=0;}
+
 				out2 = "INACTIVE FOR " + hours2 + ":" + mins2 + ":" + secs2 + ":" + tenths2;
+
 				time1 = -1;
 				time2 = -1;
 				flag = false;
 				running1 = 0;
 				running2 = 0;
+
 				var result1 = out1.fontcolor("red");
 				var result2 = out2.fontcolor("blue");
 				j = j + "DAY " + i + " " + result1 + " " + result2 + "<br>";
 				document.getElementById("day").innerHTML = j;
 				i++;
+
 				document.getElementById("statday").innerHTML = "DAY " + i;
 				document.getElementById("startPause").disabled = false;
 				document.getElementById("output1").innerHTML ="00:00:00:0";
@@ -210,7 +229,9 @@
 				document.getElementById("adv1").innerHTML = "ACTIVE FOR 0:00:00:00";
 				document.getElementById("adv2").innerHTML = "INACTIVE FOR 0:00:00:00";
 				document.getElementById("status").innerHTML = "THE USER IS";
+
 			}
+
 			function increment1()
 			{
 				if(running1 == 1)
@@ -221,6 +242,7 @@
 						var mins1 = Math.floor(time1/10/60) % 60;
 						var secs1 = Math.floor(time1/10) % 60;
 						var tenths1 = time1 % 10;
+
 						if(hours1 < 10){hours1 = "0" + hours1;}
 						if(mins1 < 10){mins1 = "0" + mins1;}
 						if(secs1 < 10){secs1 = "0" + secs1;}
@@ -230,6 +252,7 @@
 					}, 100);
 				}
 			}
+
 			function increment2()
 			{
 					if(running2 == 1)
@@ -240,6 +263,7 @@
 							var mins2 = Math.floor(time2/10/60) % 60;
 							var secs2 = Math.floor(time2/10) % 60;
 							var tenths2 = time2 % 10;
+
 							if(hours2 < 10){hours2 = "0" + hours2;}
 							if(mins2 < 10){mins2 = "0" + mins2;}
 							if(secs2 < 10){secs2 = "0" + secs2;}
@@ -259,16 +283,20 @@
 					}
 					else
 					{
+
 						var hours = Math.floor(time1/10/60/60) % 60;
 						var mins = Math.floor(time1/10/60) % 60;
 						var secs = Math.floor(time1/10) % 60;
 						var tenths = (time1 % 10)+1;
+
 						if(hours < 10){hours = "0" + hours;}
 						if(mins < 10){mins = "0" + mins;}
 						if(secs < 10){secs = "0" + secs;}
 						if(hours >= 3){running1 == 0;}
 						if(tenths >= 10){secs++; tenths=0;}
+
 						out1 = "ACTIVE FOR " + hours + ":" + mins + ":" + secs + ":" + tenths;
+
 						document.getElementById("adv1").innerHTML =out1;
 					}
 				}
@@ -280,16 +308,20 @@
 					}
 					else
 					{
+
             var hours = Math.floor(time2/10/60/60) % 60;
 						var mins = Math.floor(time2/10/60) % 60;
 						var secs = Math.floor(time2/10) % 60;
 						var tenths = (time2 % 10)+1;
+
 						if(hours < 10){hours = "0" + hours;}
 						if(mins < 10){mins = "0" + mins;}
 						if(secs < 10){secs = "0" + secs;}
 						if(hours >= 3){running1 == 0;}
 						if(tenths >= 10){secs++; tenths=0;}
+
 						out2 = "INACTIVE FOR " + hours + ":" + mins + ":" + secs + ":" + tenths;
+
 						document.getElementById("adv2").innerHTML =out2;
 					}
 				}
@@ -309,8 +341,8 @@
 			<h1 id="output2">00:00:00:0</h1>
 		</div>
 		<div>
-			<button id="startPause" onclick="setWatch()">START</button>
-			<button id="reset" onclick="reset()">RESET</button>
+			<button id="startPause" onclick="startListening()">START</button>
+			<button id="reset" onclick="reset();">RESET</button>
 		</div>
 		<div>
 			<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
