--- a/prova.html
+++ b/prova.html
@@ -140,25 +140,34 @@
 						if(x === true) {
 							setTimeout(function(x) {
 								console.log(x);
-								if(x === true) {
+								if(x === true) 
+								{
 									
 									reset();
+									startListening();
+									Puck.write('LED1.reset();\n');
+									Puck.write('LED2.reset();\n');
+									Puck.write('LED3.set();\n');
 								}
 								else
 								{
 									if(a === true)
 									{	
 										Puck.write('LED1.reset();\n');
+										Puck.write('LED3.reset();\n');
 										Puck.write('LED2.set();\n');
 										a = false;
 										startPause();
+										startListening();
 									}
 									else
 									{
 										Puck.write('LED2.reset();\n');
+										Puck.write('LED3.reset();\n');
 										Puck.write('LED1.set();\n');
 										a = true;
 										startPause();
+										startListening();
 									}
 								}
 							},300);
