--- a/prova.html
+++ b/prova.html
@@ -130,7 +130,6 @@
 			var out1 = "";
 			var out2 = "";
 			var j = "";
-			var cont = 0;
 			var a = true;
 			
 			function startListening(){
@@ -138,11 +137,12 @@
 					Puck.eval("BTN.read()",function(x) {
 						console.log(x);
 						if(x === true) {
+							var start = new Date();
 							setTimeout(function(x) {
 								console.log(x);
+								alert("Hello! I am an alert box!!");
 								if(x === true) 
 								{
-									
 									reset();
 									startListening();
 									Puck.write('LED1.reset();\n');
@@ -158,7 +158,6 @@
 										Puck.write('LED2.set();\n');
 										a = false;
 										startPause();
-										startListening();
 									}
 									else
 									{
@@ -167,7 +166,7 @@
 										Puck.write('LED1.set();\n');
 										a = true;
 										startPause();
-										startListening();
+										
 									}
 								}
 							},300);
