--- a/prova.html
+++ b/prova.html
@@ -138,7 +138,8 @@
 						console.log(x);
 						if(x === true) {
 							var start = new Date();
-							setTimeout(function(x) {
+							
+							setTimeout(Puck.eval("BTN.read()",function(x) {
 								console.log(x);
 								alert("Hello! I am an alert box!!");
 								if(x === true) 
@@ -169,7 +170,7 @@
 										
 									}
 								}
-							},300);
+							}),300);
 						}
 					});
 				},500);	
