--- a/prova.html
+++ b/prova.html
@@ -141,7 +141,7 @@
 							
 							setTimeout(Puck.eval("BTN.read()",function(x) {
 								console.log(x);
-								alert("Hello! I am an alert box!!");
+								alert("Hello! I am an alert box!!",x);
 								if(x === true) 
 								{
 									reset();
