--- a/prova.html
+++ b/prova.html
@@ -140,6 +140,7 @@
 						{
 							setTimeout(function(x){	
 								if(digitalRead(BTN)) {
+									alert("Hello! I am an alert box!!");
 									setTimeout(function(x) {
 										console.log(x);
 										if(digitalRead(BTN)) 
