--- a/prova.html
+++ b/prova.html
@@ -134,48 +134,44 @@
 			
 			function startListening(){
 				setInterval( function(){
-					Puck.eval("BTN.read()",function(x) {
-						console.log(x);
-						if(digitalRead(BTN))
-						{
-							setTimeout(function(x){	
-								if(digitalRead(BTN)) {
-									alert("Hello! I am an alert box!!");
-									setTimeout(function(x) {
-										console.log(x);
-										if(digitalRead(BTN)) 
-										{
-											reset();
-											startListening();
+					if(digitalRead(BTN))
+					{
+						setTimeout(function(){	
+							if(digitalRead(BTN)) {
+								alert("Hello! I am an alert box!!");
+								setTimeout(function() {
+									if(digitalRead(BTN)) 
+									{
+										reset();
+										startListening();
+										Puck.write('LED1.reset();\n');
+										Puck.write('LED2.reset();\n');
+										Puck.write('LED3.set();\n');
+									}
+									else
+									{
+										if(a === true)
+										{	
 											Puck.write('LED1.reset();\n');
-											Puck.write('LED2.reset();\n');
-											Puck.write('LED3.set();\n');
+											Puck.write('LED3.reset();\n');
+											Puck.write('LED2.set();\n');
+											a = false;
+											startPause();
 										}
 										else
 										{
-											if(a === true)
-											{	
-												Puck.write('LED1.reset();\n');
-												Puck.write('LED3.reset();\n');
-												Puck.write('LED2.set();\n');
-												a = false;
-												startPause();
-											}
-											else
-											{
-												Puck.write('LED2.reset();\n');
-												Puck.write('LED3.reset();\n');
-												Puck.write('LED1.set();\n');
-												a = true;
-												startPause();
+											Puck.write('LED2.reset();\n');
+											Puck.write('LED3.reset();\n');
+											Puck.write('LED1.set();\n');
+											a = true;
+											startPause();
 
-											}
 										}
-									},300);
-								}
-							},200);
-						}
-					});
+									}
+								},300);
+							}
+						},200);
+					}
 				},700);	
 		      	}
 			
