--- a/prova.html
+++ b/prova.html
@@ -141,6 +141,7 @@
 								Puck.eval("BTN.read()",function(x){
 									if(x) {
 										setTimeout(function() {
+											alert("Hello! " + x);
 											Puck.eval("BTN.read()",function(x){
 												if(x) 
 												{
