--- a/test.html
+++ b/test.html
@@ -59,6 +59,10 @@
 				width: 40%;
 				font-size: 15px;
 				letter-spacing: 1px;
+				float:right; 
+				text-align:right; 
+				margin-left:65px; 
+				color:blue;
 			}
 			#startPause
 			{
