--- a/test.html
+++ b/test.html
@@ -126,13 +126,13 @@
 		</style>
 	</head>
 	<body>
-		<div class >
+		<div>
 			<h1 id="status" style="float:center;">THE USER IS </h1>
 			<h1 id="statday" style="float:center;">DAY 1</h1>
 		</div>
 		<div>
-			<h1 id="tag1" style="">ACTIVE</h1>
-			<h1 id="tag2" style="float:right; text-align:right; margin-left:65px; color:blue;">NOT ACTIVE</h1>
+			<h1 id="tag1">ACTIVE</h1>
+			<h1 id="tag2">NOT ACTIVE</h1>
 			<h1 id="output1">00:00:00:0</h1>
 			<h1 id="output2">00:00:00:0</h1>
 		</div>
