--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
 			#output2
 			{
 				width: 40%;
-				background-color:00C8C8;
+				background-color:light blue;
 				text-align: center;
 				font-size: 28px;
 				letter-spacing: 1px;
