--- a/test.html
+++ b/test.html
@@ -126,9 +126,13 @@
 		</style>
 	</head>
 	<body>
-		<div>
-			<h1 id="status" style="float:center;">THE USER IS </h1>
-			<h1 id="statday" style="float:center;">DAY 1</h1>
+		<div class="row">
+			<div class="col-sm-4">
+				<h1 id="status" style="float:center;">THE USER IS </h1>
+				</div>
+			<div class="col-sm-4">
+				<h1 id="statday" style="float:center;">DAY 1</h1>
+			</div>
 		</div>
 		<div>
 			<h1 id="tag1">ACTIVE</h1>
