--- a/test.html
+++ b/test.html
@@ -128,10 +128,10 @@
 	<body>
 		<div class="row">
 			<div class="col-sm-4">
-				<h1 id="status" style="float:center;">THE USER IS </h1>
+				<h1 id="status">THE USER IS </h1>
 				</div>
 			<div class="col-sm-4">
-				<h1 id="statday" style="float:center;">DAY 1</h1>
+				<h1 id="statday">DAY 1</h1>
 			</div>
 		</div>
 		<div>
