--- a/test.html
+++ b/test.html
@@ -127,10 +127,10 @@
 	</head>
 	<body>
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-xs-6">
 				<h1 id="statday">DAY 1</h1>
 				</div>
-			<div class="col-sm-6">
+			<div class="col-xs-6">
 				<h1 id="status">THE USER IS </h1>
 			</div>
 		</div>
