--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 				text-align: right;
 				font-size: 20px;
 				letter-spacing: 1px;
-				float:right;
+				float:center;
 			}
 			#statday
 			{
@@ -23,7 +23,7 @@
 				text-align: left;
 				font-size: 20px;
 				letter-spacing: 1px;
-				float: left;
+				float: center;
 			}
 			#output1
 			{
@@ -127,11 +127,14 @@
 	</head>
 	<body>
 		<div class="row">
-			<div class="col-xs-6">
-				<h3 id="statday">DAY 1</h3>
+			<div class="col-xs-12">
+				<h1 id="statday">DAY 1</h1>
 				</div>
-			<div class="col-xs-6">
-				<h3 id="status">THE USER IS </h3>
+		</div>
+		
+		<div class="row">
+			<div class="col-xs-12">
+				<h1 id="status">THE USER IS </h1>
 			</div>
 		</div>
 		<div>
