--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 			#status
 			{
 				width: 40%;
-				text-align: right;
+				text-align: center;
 				font-size: 20px;
 				letter-spacing: 1px;
 				float:center;
@@ -20,7 +20,7 @@
 			#statday
 			{
 				width: 40%;
-				text-align: left;
+				text-align: center;
 				font-size: 20px;
 				letter-spacing: 1px;
 				float: center;
