--- a/test.html
+++ b/test.html
@@ -12,10 +12,10 @@
 			#status
 			{
 				width: 40%;
-				text-align: center;
+				text-align: left;
 				font-size: 20px;
 				letter-spacing: 1px;
-				float:center;
+				float:left;
 			}
 			#statday
 			{
