--- a/test.html
+++ b/test.html
@@ -20,10 +20,10 @@
 			#statday
 			{
 				width: 40%;
-				text-align: center;
+				text-align: left;
 				font-size: 20px;
 				letter-spacing: 1px;
-				float: center;
+				float: left;
 			}
 			#output1
 			{
