--- a/test.html
+++ b/test.html
@@ -137,15 +137,27 @@
 				<h1 id="status">THE USER IS </h1>
 			</div>
 		</div>
-		<div>
-			<h1 id="tag1">ACTIVE</h1>
-			<h1 id="tag2">NOT ACTIVE</h1>
-			<h1 id="output1">00:00:00:0</h1>
-			<h1 id="output2">00:00:00:0</h1>
+		<div class="row">
+			<div class="col-xs-6">
+				<h1 id="tag1">ACTIVE</h1>
+			</div>	
+			<div class="col-xs-6">
+				<h1 id="output1">00:00:00:0</h1>
+			</div>	
+			<div class="col-xs-6">
+				<button id="startPause" onclick="">START</button>
+			</div>	
 		</div>
-		<div>
-			<button id="startPause" onclick="">START</button>
-			<button id="reset" onclick=";">RESET</button>
+		<div class="row">
+			<div class="col-xs-6">
+				<h1 id="tag2">NOT ACTIVE</h1>
+			</div>
+			<div class="col-xs-6">
+				<h1 id="output2">00:00:00:0</h1>
+			</div>
+			<div class="col-xs-6">
+				<button id="reset" onclick=";">RESET</button>
+			</div>
 		</div>
 		<div>
 			<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
