--- a/test.html
+++ b/test.html
@@ -137,7 +137,7 @@
 				<h1 id="status">THE USER IS </h1>
 			</div>
 		</div>
-		<div class="row">
+		<div>
 			<div class="col-xs-6">
 				<h1 id="tag1">ACTIVE</h1>
 			</div>	
@@ -148,7 +148,7 @@
 				<button id="startPause" onclick="">START</button>
 			</div>	
 		</div>
-		<div class="row">
+		<div>
 			<div class="col-xs-6">
 				<h1 id="tag2">NOT ACTIVE</h1>
 			</div>
