--- a/test.html
+++ b/test.html
@@ -126,45 +126,51 @@
 		</style>
 	</head>
 	<body>
-		<div class="row">
+		<div>
 			<div class="col-xs-12">
 				<h1 id="statday">DAY 1</h1>
 				</div>
 		</div>
 		
-		<div class="row">
+		<div>
 			<div class="col-xs-12">
 				<h1 id="status">THE USER IS </h1>
 			</div>
 		</div>
 		<div>
-			<div class="col-xs-7">
+			<div class="col-xs-12">
 				<h1 id="tag1">ACTIVE</h1>
 			</div>	
-			<div class="col-xs-6">
+			<div class="col-xs-12">
 				<h1 id="output1">00:00:00:0</h1>
 			</div>	
-			<div class="col-xs-6">
+			<div class="col-xs-12">
 				<button id="startPause" onclick="">START</button>
 			</div>	
 		</div>
 		<div>
-			<div class="col-xs-7">
+			<div class="col-xs-12">
 				<h1 id="tag2">NOT ACTIVE</h1>
 			</div>
-			<div class="col-xs-6">
+			<div class="col-xs-12">
 				<h1 id="output2">00:00:00:0</h1>
 			</div>
-			<div class="col-xs-6">
+			<div class="col-xs-12">
 				<button id="reset" onclick=";">RESET</button>
 			</div>
 		</div>
 		<div>
-			<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
-			<h1 id="adv2">INACTIVE FOR 0:00:00:00</h1>
-			<h1 id="day"></h1>
+			<div class="col-xs-12">
+				<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
+			</div>
+			<div class="col-xs-12">
+				<h1 id="adv2">INACTIVE FOR 0:00:00:00</h1>
+			</div>
+			<div class="col-xs-12">
+				<h1 id="day"></h1>
+			</div>
 		</div>
-		<div>
+		<div class="col-xs-12">
 			<h1 id="ccc"></h1>
 		</div>
 	</body>
