--- a/test.html
+++ b/test.html
@@ -12,18 +12,18 @@
 			#status
 			{
 				width: 40%;
-				text-align: left;
+				text-align: center;
 				font-size: 20px;
 				letter-spacing: 1px;
-				float:left;
+				float:center;
 			}
 			#statday
 			{
 				width: 40%;
-				text-align: left;
+				text-align: center;
 				font-size: 20px;
 				letter-spacing: 1px;
-				float: left;
+				float: center;
 			}
 			#output1
 			{
@@ -33,7 +33,7 @@
 				font-size: 28px;
 				letter-spacing: 1px;
 				padding: 7px;
-				float:left;
+				float:center;
 			}
 			#output2
 			{
@@ -43,15 +43,15 @@
 				font-size: 28px;
 				letter-spacing: 1px;
 				padding: 7px;
-				float:right;
+				float:center;
 			}
 			#tag1
 			{
 				width: 25%;
 				font-size: 15px;
 				letter-spacing: 1px;
-				float:left;
-				text-align:left;
+				float:center;
+				text-align:center;
 				color:red;
 			}
 			#tag2
@@ -59,8 +59,8 @@
 				width: 40%;
 				font-size: 15px;
 				letter-spacing: 1px;
-				float:right; 
-				text-align:right; 
+				float:center; 
+				text-align:center; 
 				margin-left:65px; 
 				color:blue;
 			}
@@ -76,7 +76,7 @@
 				cursor: pointer;
 				font-size: 15px;
 				width: 42%;
-				float: left;
+				float: center;
 			}
 			#reset
 			{
@@ -90,7 +90,7 @@
 				cursor:pointer;
 				font-size: 15px;
 				width: 42%;
-				float: right;
+				float: center;
 			}
 			#adv1
 			{
@@ -116,11 +116,11 @@
       }
 			#day
 			{
-				text-align: left;
+				text-align: center;
 				font-size: 15px;
 				letter-spacing: 1px;
 				padding: 10px;
-				float:left;
+				float:center;
 				width: 90%;
       }
 		</style>
@@ -160,18 +160,15 @@
 			</div>
 		</div>
 		<div>
-			<div class="col-xs-12">
+			<div class="col-xs-6">
 				<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
 			</div>
-			<div class="col-xs-12">
+			<div class="col-xs-6">
 				<h1 id="adv2">INACTIVE FOR 0:00:00:00</h1>
-			</div>
-			<div class="col-xs-12">
-				<h1 id="day"></h1>
 			</div>
 		</div>
 		<div class="col-xs-12">
-			<h1 id="ccc"></h1>
+			<h1 id="day"></h1>
 		</div>
 	</body>
 </html>
