--- a/test.html
+++ b/test.html
@@ -123,6 +123,234 @@
 				width: 100%;
       }
 		</style>
+		<script>
+		{
+			var time1 = 0;
+			var time2 = 0;
+			var running1 = 0;
+			var running2 = 1;
+			var flag = false;
+			var log = true;
+			var i = 1;
+			var out1 = "";
+			var out2 = "";
+			var j = "";
+			var a = true;
+			
+			function startListening(){
+				Puck.eval("BTN.read()",function(x){
+					if(x)
+					{
+						setTimeout(function(){	
+							Puck.eval("BTN.read()",function(x){
+								if(x) {
+									setTimeout(function() {
+										Puck.eval("BTN.read()",function(x){
+											if(x) 
+											{
+												reset();
+												startListening();
+												Puck.write('LED1.reset();\n');
+												Puck.write('LED2.reset();\n');
+												Puck.write('LED3.set();\n');
+												Puck.write('LED3.reset();\n');
+												
+											}
+											else
+											{
+												if(a === true)
+												{	
+													Puck.write('LED1.reset();\n');
+													Puck.write('LED3.reset();\n');
+													Puck.write('LED2.set();\n');
+													Puck.write('LED2.reset();\n');
+													a = false;
+													startPause();
+													startListening();
+												}
+												else
+												{
+													Puck.write('LED2.reset();\n');
+													Puck.write('LED3.reset();\n');
+													Puck.write('LED1.set();\n');
+													Puck.write('LED1.reset();\n');
+													a = true;
+													startPause();
+													startListening();
+												}
+											}
+										});
+									},1500);
+								}
+								else
+								{
+									startListening();
+								}
+							});
+						},100);
+					}
+					else
+					{
+						startListening();
+					}
+				});
+		      	}
+			
+			function startPause()
+			{
+				if(flag == false)
+				{
+					running2 = 1;
+				}
+				if(running1 == 0 && running2 == 1 && flag == false)
+				{
+					log=false;
+					login();
+					running1 = 1;
+					running2 = 0;
+					flag = true;
+					increment1();
+					document.getElementById("startPause").innerHTML = "TIMER ACTIVE";
+					document.getElementById("status").innerHTML = "THE USER IS ACTIVE";
+				}
+				else if(running1 == 1 && running2 == 0 && flag == true)
+				{
+					log = true;
+					login();
+					running1 = 0;
+					running2 = 1;
+					flag = false;
+					increment2();
+					document.getElementById("startPause").innerHTML = "TIMER NOT ACTIVE";
+					document.getElementById("status").innerHTML = "THE USER IS NOT ACTIVE";
+				}
+			}
+			function reset()
+			{
+				var hours1 = Math.floor(time1/10/60/60) % 60;
+				var mins1 = Math.floor(time1/10/60) % 60;
+				var secs1 = Math.floor(time1/10) % 60;
+				var tenths1 = (time1 % 10)+1;
+				if(hours1 < 10){hours1 = "0" + hours1;}
+				if(mins1 < 10){mins1 = "0" + mins1;}
+				if(secs1 < 10){secs1 = "0" + secs1;}
+				if(tenths1 >= 10){secs1++; tenths1=0;}
+				out1 = "ACTIVE FOR " + hours1 + ":" + mins1 + ":" + secs1 + ":" + tenths1;
+				var hours2 = Math.floor(time2/10/60/60) % 60;
+				var mins2 = Math.floor(time2/10/60) % 60;
+				var secs2 = Math.floor(time2/10) % 60;
+				var tenths2 = (time2 % 10)+1;
+				if(hours2 < 10){hours2 = "0" + hours2;}
+				if(mins2 < 10){mins2 = "0" + mins2;}
+				if(secs2 < 10){secs2 = "0" + secs2;}
+				if(hours2 >= 3){running2 == 0;}
+				if(tenths2 >= 10){secs2++; tenths2=0;}
+				out2 = "INACTIVE FOR " + hours2 + ":" + mins2 + ":" + secs2 + ":" + tenths2;
+				time1 = -1;
+				time2 = -1;
+				flag = false;
+				running1 = 0;
+				running2 = 0;
+				a = true;
+				var result1 = out1.fontcolor("red");
+				var result2 = out2.fontcolor("blue");
+				j = j + "DAY " + i + " " + result1 + " " + result2 + "<br>";
+				document.getElementById("day").innerHTML = j;
+				i++;
+				document.getElementById("statday").innerHTML = "DAY " + i;
+				document.getElementById("startPause").disabled = false;
+				document.getElementById("output1").innerHTML ="00:00:00:0";
+				document.getElementById("output2").innerHTML ="00:00:00:0";
+				document.getElementById("startPause").innerHTML = "START";
+				document.getElementById("adv1").innerHTML = "ACTIVE FOR 0:00:00:00";
+				document.getElementById("adv2").innerHTML = "INACTIVE FOR 0:00:00:00";
+				document.getElementById("status").innerHTML = "THE USER IS";
+			}
+			function increment1()
+			{
+				if(running1 == 1)
+				{
+					setTimeout(function(){
+						time1++;
+						var hours1 = Math.floor(time1/10/60/60) % 24;
+						var mins1 = Math.floor(time1/10/60) % 60;
+						var secs1 = Math.floor(time1/10) % 60;
+						var tenths1 = time1 % 10;
+						if(hours1 < 10){hours1 = "0" + hours1;}
+						if(mins1 < 10){mins1 = "0" + mins1;}
+						if(secs1 < 10){secs1 = "0" + secs1;}
+						if(hours1 >= 3){running1 == 0;}
+						document.getElementById("output1").innerHTML = hours1 + ":" + mins1 + ":" + secs1 + ":" + tenths1;
+						increment1();
+					}, 100);
+				}
+			}
+			function increment2()
+			{
+					if(running2 == 1)
+					{
+						setTimeout(function(){
+							time2++;
+							var hours2 = Math.floor(time2/10/60/60) % 60;
+							var mins2 = Math.floor(time2/10/60) % 60;
+							var secs2 = Math.floor(time2/10) % 60;
+							var tenths2 = time2 % 10;
+							if(hours2 < 10){hours2 = "0" + hours2;}
+							if(mins2 < 10){mins2 = "0" + mins2;}
+							if(secs2 < 10){secs2 = "0" + secs2;}
+							if(hours2 >= 3){running2 == 0;}
+							document.getElementById("output2").innerHTML = hours2 + ":" + mins2 + ":" + secs2 + ":" + tenths2;
+							increment2();
+						}, 100);
+					}
+			}
+			function login()
+			{
+				if(log)
+				{
+					if(time1==(-1) || time1==0)
+					{
+						document.getElementById("adv1").innerHTML = "ACTIVE FOR 0:00:00:00";
+					}
+					else
+					{
+						var hours = Math.floor(time1/10/60/60) % 60;
+						var mins = Math.floor(time1/10/60) % 60;
+						var secs = Math.floor(time1/10) % 60;
+						var tenths = (time1 % 10)+1;
+						if(hours < 10){hours = "0" + hours;}
+						if(mins < 10){mins = "0" + mins;}
+						if(secs < 10){secs = "0" + secs;}
+						if(hours >= 3){running1 == 0;}
+						if(tenths >= 10){secs++; tenths=0;}
+						out1 = "ACTIVE FOR " + hours + ":" + mins + ":" + secs + ":" + tenths;
+						document.getElementById("adv1").innerHTML =out1;
+					}
+				}
+				else
+				{
+					if(time2==(-1) || time2==0)
+					{
+						document.getElementById("adv2").innerHTML = "INACTIVE FOR 0:00:00:00";
+					}
+					else
+					{
+            var hours = Math.floor(time2/10/60/60) % 60;
+						var mins = Math.floor(time2/10/60) % 60;
+						var secs = Math.floor(time2/10) % 60;
+						var tenths = (time2 % 10)+1;
+						if(hours < 10){hours = "0" + hours;}
+						if(mins < 10){mins = "0" + mins;}
+						if(secs < 10){secs = "0" + secs;}
+						if(hours >= 3){running1 == 0;}
+						if(tenths >= 10){secs++; tenths=0;}
+						out2 = "INACTIVE FOR " + hours + ":" + mins + ":" + secs + ":" + tenths;
+						document.getElementById("adv2").innerHTML =out2;
+					}
+				}
+			}
+		}
+		</script>
 	</head>
 	<body>
 		<div>
@@ -144,7 +372,7 @@
 				<h1 id="output1">00:00:00:0</h1>
 			</div>	
 			<div class="col-xs-12">
-				<button id="startPause" onclick="">START</button>
+				<button id="startPause" onclick="startListening()">START</button>
 			</div>	
 		</div>
 		<div>
@@ -155,7 +383,7 @@
 				<h1 id="output2">00:00:00:0</h1>
 			</div>
 			<div class="col-xs-12">
-				<button id="reset" onclick=";">RESET</button>
+				<button id="reset" onclick="reset()">RESET</button>
 			</div>
 		</div>
 		<div>
