--- a/test.html
+++ b/test.html
@@ -30,9 +30,9 @@
 				width: 100%;
 				background-color:red;
 				text-align: center;
-				font-size: 28px;
-				letter-spacing: 1px;
-				padding: 7px;
+				font-size: 30px;
+				letter-spacing: 2px;
+				padding: 8px;
 				float:center;
 			}
 			#output2
@@ -40,9 +40,9 @@
 				width: 100%;
 				background-color:#00C8C8;
 				text-align: center;
-				font-size: 28px;
-				letter-spacing: 1px;
-				padding: 7px;
+				font-size: 30px;
+				letter-spacing: 2px;
+				padding: 8px;
 				float:center;
 			}
 			#tag1
@@ -115,11 +115,11 @@
       }
 			#day
 			{
-				text-align: center;
+				text-align: left;
 				font-size: 15px;
 				letter-spacing: 1px;
 				padding: 10px;
-				float:center;
+				float:left;
 				width: 100%;
       }
 		</style>
