--- a/prova.html
+++ b/prova.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 		<script src="https://www.puck-js.com/puck.js"></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Prova</title>
 		<style>
 			#status
@@ -371,26 +372,48 @@
 	</head>
 	<body>
 		<div>
-			<h1 id="status" style="float:center;">THE USER IS </h1>
-			<h1 id="statday" style="float:center;">DAY 1</h1>
-			<h1 id="tag1" style="">ACTIVE</h1>
-			<h1 id="tag2" style="float:right; text-align:right; margin-left:65px; color:blue;">NOT ACTIVE</h1>
+			<div class="col-xs-12">
+				<h1 id="statday">DAY 1</h1>
+				</div>
+		</div>
+		
+		<div>
+			<div class="col-xs-12">
+				<h1 id="status">THE USER IS </h1>
+			</div>
 		</div>
 		<div>
-			<h1 id="output1">00:00:00:0</h1>
-			<h1 id="output2">00:00:00:0</h1>
+			<div class="col-xs-12">
+				<h1 id="tag1">ACTIVE</h1>
+			</div>	
+			<div class="col-xs-12">
+				<h1 id="output1">00:00:00:0</h1>
+			</div>	
+			<div class="col-xs-12">
+				<button id="startPause" onclick="startListening()">START</button>
+			</div>	
 		</div>
 		<div>
-			<button id="startPause" onclick="startListening()">START</button>
-			<button id="reset" onclick="reset();">RESET</button>
+			<div class="col-xs-12">
+				<h1 id="tag2">NOT ACTIVE</h1>
+			</div>
+			<div class="col-xs-12">
+				<h1 id="output2">00:00:00:0</h1>
+			</div>
+			<div class="col-xs-12">
+				<button id="reset" onclick="reset()">RESET</button>
+			</div>
 		</div>
 		<div>
-			<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
-			<h1 id="adv2">INACTIVE FOR 0:00:00:00</h1>
+			<div class="col-xs-6">
+				<h1 id="adv1">ACTIVE FOR 0:00:00:00</h1>
+			</div>
+			<div class="col-xs-6">
+				<h1 id="adv2">INACTIVE FOR 0:00:00:00</h1>
+			</div>
+		</div>
+		<div class="col-xs-12">
 			<h1 id="day"></h1>
-		</div>
-		<div>
-			<h1 id="ccc"></h1>
 		</div>
 	</body>
 </html>
