--- a/prova.html
+++ b/prova.html
@@ -7,57 +7,60 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Prova</title>
-		<style>
+		<style>	
 			#status
 			{
-				width: 40%;
-				text-align: right;
+				width: 100%;
+				text-align: center;
 				font-size: 20px;
 				letter-spacing: 1px;
-				float:right;
+				float:center;
 			}
 			#statday
 			{
-				width: 40%;
-				text-align: left;
+				width: 100%;
+				text-align: center;
 				font-size: 20px;
 				letter-spacing: 1px;
-				float: left;
+				float: center;
 			}
 			#output1
 			{
-				width: 40%;
+				width: 100%;
 				background-color:red;
 				text-align: center;
-				font-size: 28px;
-				letter-spacing: 1px;
-				padding: 7px;
-				float:left;
+				font-size: 30px;
+				letter-spacing: 2px;
+				padding: 8px;
+				float:center;
 			}
 			#output2
 			{
-				width: 40%;
-				background-color:00C8C8;
+				width: 100%;
+				background-color:#00C8C8;
 				text-align: center;
-				font-size: 28px;
-				letter-spacing: 1px;
-				padding: 7px;
-				float:right;
+				font-size: 30px;
+				letter-spacing: 2px;
+				padding: 8px;
+				float:center;
 			}
 			#tag1
 			{
-				width: 25%;
+				width: 100%;
 				font-size: 15px;
 				letter-spacing: 1px;
-				float:left;
-				text-align:left;
+				float:center;
+				text-align:center;
 				color:red;
 			}
 			#tag2
 			{
-				width: 40%;
+				width: 100%;
 				font-size: 15px;
 				letter-spacing: 1px;
+				float:center; 
+				text-align:center; 
+				color:blue;
 			}
 			#startPause
 			{
@@ -70,8 +73,8 @@
 				letter-spacing: 1px;
 				cursor: pointer;
 				font-size: 15px;
-				width: 42%;
-				float: left;
+				width: 100%;
+				float: center;
 			}
 			#reset
 			{
@@ -84,8 +87,8 @@
 				letter-spacing: 1px;
 				cursor:pointer;
 				font-size: 15px;
-				width: 42%;
-				float: right;
+				width: 100%;
+				float: center;
 			}
 			#adv1
 			{
@@ -96,8 +99,8 @@
 				letter-spacing: 1px;
 				float:left;
 				padding: 10px;
-				width: 40%;
-      }
+				width: 100%;
+      			}
 			#adv2
 			{
 				color: blue;
@@ -106,9 +109,9 @@
 				letter-spacing: 1px;
 				padding: 10px;
 				float:right;
-				width: 40%;
+				width: 100%;
 				text-align: right;
-      }
+      			}
 			#day
 			{
 				text-align: left;
@@ -116,8 +119,8 @@
 				letter-spacing: 1px;
 				padding: 10px;
 				float:left;
-				width: 90%;
-      }
+				width: 100%;
+     			}
 		</style>
 		<script>
 		{
