--- a/prova.html
+++ b/prova.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 	<head>
 		<script src="https://www.puck-js.com/puck.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -138,11 +138,10 @@
 			
 			function startListening(){
 				Puck.eval("BTN.read()",function(x){
-					if(x)
-					{
+					if(x){
 						setTimeout(function(){	
 							Puck.eval("BTN.read()",function(x){
-								if(x) {
+								if(x){
 									setTimeout(function() {
 										Puck.eval("BTN.read()",function(x){
 											if(x) 
@@ -198,7 +197,7 @@
 			
 			function startPause()
 			{
-				if(flag == false)
+				if(flag === false)
 				{
 					running2 = 1;
 				}
